# emmaus-walking-data

./: .gitignore  .gitpod.yml  .pdm-python  .pdm.toml  Makefile  README.md  README_TODO.md  README_pdm.md  export.zip_fix_xml.sh  justfile  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements-pdm.txt  requirements.in  requirements.txt
.devcontainer/: devcontainer.json
.streamlit/: config.toml
data/: README.md  patch.txt  walk_groups.csv  walk_groups.xlsx  walk_groups_EXAMPLE.csv  workout_groups.csv  workouts_labelled.csv  workouts_labelled_EXAMPLE.csv
notebooks/: alternate-extract-exported-data.ipynb  gpx-viewer.ipynb  healthkit-direct-extract.ipynb  healthkit_to_sqlite.ipynb  helper_folium.py  try-gpx-converter.ipynb  try-gpxo.ipynb  try-parquet-meta.ipynb  unique_id.ipynb
sql/: list_all_tables.sql  select_finish_point_workout.sql  select_star_walking_workouts.sql  select_start_point_workout.sql
src/: app_gpx_viewer.py  app_label_workouts.py  app_map_walks.py  app_prepare_data.py  app_walk_data.py  healthkit_to_sqlite.py  helper_app.py  helper_folium.py  walk_data_aux.py
