[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "autopep8>=2.0.2",
    "notebook>=6.5.3",
    "reverse-geocoder>=1.5.1",
]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Michael Booth", email = "michael@databooth.com.au"},
]
dependencies = [
    "folium>=0.14.0",
    "healthkit-to-sqlite>=1.0.1",
    "pandas>=1.5.3",
    "numpy>=1.24.2",
    "pendulum>=2.1.2",
    "reverse-geocode>=1.4.1",
    "sqlite-utils>=3.30",
    "streamlit>=1.12.0",
    "streamlit-aggrid>=0.3.4.post3",
    "streamlit-folium>=0.11.0",
    "watchdog>=2.3.1",
    "gpxo>=0.1.6",
    "matplotlib>=3.7.1",
    "gpx-converter>=2.1.0",
]
requires-python = ">=3.9"
license = {text = "MIT"}
